<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="25dp"
     
        android:layout_alignParentTop="true"
        android:background="@color/grey"
        android:orientation="horizontal" >
        
        <Button
            android:id="@+id/btnback"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:text="@string/app_back"
            android:textColor="@color/blue" />
        
          <TextView
            android:id="@+id/txtsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/emergency"
            android:textColor="@color/black" />
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
      
        android:orientation="vertical">
        <TextView 
            android:id="@+id/texthead"
            android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    
        android:text="@string/texthead"
           android:layout_gravity="center" 
        android:textColor="@color/blue"/>
        
    </LinearLayout>
<LinearLayout 
    android:id="@+id/details1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
         android:layout_below="@+id/info"
         android:layout_marginTop="20dp"
         android:orientation="horizontal">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      
        android:text="@string/firstname"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:layout_weight="1"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edtfirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@drawable/rectangiular" >
   
        <requestFocus />
    </EditText>

   </LinearLayout>
   <LinearLayout 
    android:id="@+id/details2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
         android:layout_below="@+id/details1"
         android:layout_marginTop="20dp"
         android:orientation="horizontal">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      
        android:text="@string/lastname"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:layout_weight="1"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edtlastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@drawable/rectangiular" >
   
        <requestFocus />
    </EditText>

   </LinearLayout>
    <LinearLayout 
    android:id="@+id/details3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
         android:layout_below="@+id/details2"
         android:layout_marginTop="20dp"
         android:orientation="horizontal">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      
        android:text="@string/state"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:layout_weight="1"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edtstate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@drawable/rectangiular" >
   
        <requestFocus />
    </EditText>

   </LinearLayout>
    <LinearLayout 
    android:id="@+id/details4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
         android:layout_below="@+id/details3"
         android:layout_marginTop="20dp"
         android:orientation="horizontal">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      
        android:text="@string/cellphone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:layout_weight="1"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edtcell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:background="@drawable/rectangiular" >
   
        <requestFocus />
    </EditText>
    

   </LinearLayout>
    <LinearLayout 
    android:id="@+id/details5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
         android:layout_below="@+id/details4"
         android:layout_marginTop="20dp"
         android:orientation="horizontal">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      
        android:text="@string/homephone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:layout_weight="1"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edthome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:background="@drawable/rectangiular" >
   
        <requestFocus />
    </EditText>
    

   </LinearLayout>
   <LinearLayout 
    android:id="@+id/details6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
         android:layout_below="@+id/details5"
         android:layout_marginTop="20dp"
         android:orientation="horizontal">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      
        android:text="@string/businessphone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:layout_weight="1"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edtbusiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:background="@drawable/rectangiular" >
   
        <requestFocus />
    </EditText>
    

   </LinearLayout>
   <LinearLayout 
    android:id="@+id/details7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
         android:layout_below="@+id/details6"
         android:layout_marginTop="20dp"
         android:orientation="horizontal">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
      
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:layout_weight="1"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edtbusiness1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:background="@drawable/rectangiular" >
   
        <requestFocus />
    </EditText>
    

   </LinearLayout>

   <Button
       android:id="@+id/btnsubmit"
       android:layout_width="100dp"
       android:layout_height="40dp"
       android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
       android:layout_marginBottom="50dp"
       android:text="@string/submit"
      android:background="@color/blue"
       android:textColor="@color/white" />

</RelativeLayout>